cluster/apps/jenkins/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "code-tags-check"
    hajimari.io/group: "Applications"
    raefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    name: jenkins-ingress
spec:
  ingressClassName: "traefik"

  tls:
    - hosts:
        - https-jenkins.${SECRET_DOMAIN}

  rules:
    - host: "jenkins.${SECRET_DOMAIN}"
      http:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 80
